--- a/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
+++ b/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    working-directory: SANJEET-VINOD-JAIN/
 
     steps:
       - uses: actions/checkout@v2
@@ -19,7 +20,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.301'
+          dotnet-version: "3.1.301"
           include-prerelease: true
 
       - name: Build with dotnet
@@ -38,7 +39,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -51,7 +52,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'ImageSharingWithCloudStorage20221106194344'
-          slot-name: 'Production'
+          app-name: "ImageSharingWithCloudStorage20221106194344"
+          slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B9E8040582644EBE941D1D45F0476AB5 }}
           package: .
