--- a/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
+++ b/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
@@ -12,7 +12,6 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    working-directory: SANJEET-VINOD-JAIN/
 
     steps:
       - uses: actions/checkout@v2
@@ -25,9 +24,11 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        working-directory: SANJEET-VINOD-JAIN
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        working-directory: SANJEET-VINOD-JAIN
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
