--- a/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
+++ b/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up .NET frameowrk
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: "6.0.10"
+          dotnet-version: 6.0.x
           include-prerelease: true
 
       - name: Build with dotnet
