--- a/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
+++ b/.github/workflows/main_imagesharingwithcloudstorage20221106194344.yml
@@ -31,7 +31,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/ImageSharingWithCloudStorage
+        run: dotnet publish -c Release
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
